[gd_scene load_steps=2 format=3 uid="uid://d6yqjqyqjqyqj"]

[ext_resource type="Script" path="res://scripts/ui/game_screen.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://dkea33yqf2w3c" path="res://scenes/board.tscn" id="2_board"]

[node name="GameScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_abcde")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopInfoContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Player1Name" type="Label" parent="VBoxContainer/TopInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jogador 1: Nome"

[node name="TurnIndicator" type="Label" parent="VBoxContainer/TopInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sua Vez!"
horizontal_alignment = 1

[node name="Player2Name" type="Label" parent="VBoxContainer/TopInfoContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jogador 2: Nome"
horizontal_alignment = 2

[node name="BoardContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Board" parent="VBoxContainer/BoardContainer" instance=ExtResource("2_board")]
layout_mode = 2

[node name="GameStatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Aguardando oponente..."
horizontal_alignment = 1
